...
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_card_number_label"/>
        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardNumber"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="@dimen/mpsdk_edittext_margin_top_inline_form"
            android:textSize="19dp"
...
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:lines="1"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_cardholder_name"/>
        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardholderName"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="2dp"
            android:maxLength="50"
...
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:lines="1"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_card_expire_date_label"/>
        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardExpiryDate"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="2dp"
            android:singleLine="true"
...
            android:textSize="14dp"
            android:lines="1"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_security_code"/>

        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardSecurityCode"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="2dp"
            android:singleLine="true"
...
                        android:layout_marginStart="16dp"
                        android:textSize="14dp"
                        android:lines="1"
                        android:textColor="@color/mpsdk_color_new_card_text"
                        android:text="@string/mpsdk_card_identification_number"/>
                    <com.mercadopago.views.MPEditText
                        android:id="@+id/mpsdkCardIdentificationNumber"
                        android:layout_width="193dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
                        android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
                        android:layout_marginTop="2dp"
                        android:imeOptions="actionNext"
...
