...
    <string name="mpsdk_invalid_card_luhn">El número de tarjeta que ingresaste es incorrecto</string>
    <string name="mpsdk_invalid_card_length">Ingresa los %1$s números de la tarjeta</string>
    <string name="mpsdk_invalid_cvv_length">Ingresa los %1$s números del código de seguridad</string>
    <string name="mpsdk_invalid_empty_name">Ingresa el nombre y apellido impreso en la tarjeta</string>
    <string name="mpsdk_invalid_expiry_date">La fecha que ingresaste es inválida</string>
    <string name="mpsdk_invalid_identification_number">Ingresa todos los números</string>
    <string name="mpsdk_invalid_payment_method">Método de pago no soportado</string>
    <string name="mpsdk_title_activity_congrats">¡Felicitaciones!</string>
    <string name="mpsdk_total_amount">Total</string>
    <string name="mpsdk_payment_method_detail">Medio de pago</string>
    <string name="mpsdk_operation">Operación</string>
    <string name="mpsdk_date_created">Fecha</string>
    <string name="mpsdk_finish_label">Continuar</string>
...
    <string name="mpsdk_title_activity_bank_deals">Promociones</string>
    <string name="mpsdk_empty_bank_deals">No tienes ninguna promoción disponible</string>
    <string name="mpsdk_bank">banco</string>
    <string name="mpsdk_bank_zero_rate"><![CDATA[<strong>%1$s cuotas sin interés</strong>]]></string>
    <string name="mpsdk_and">y</string>
    <string name="mpsdk_title_activity_terms_and_conditions">Términos y condiciones</string>
    <string name="mpsdk_bank_deals_action">Ver promociones</string>
    <string name="mpsdk_bank_deals">Promociones</string>
    <string name="mpsdk_mp_app_name">MercadoPago</string>
    <string name="mpsdk_title_activity_checkout">Revisa si está todo bien…</string>
    <string name="mpsdk_title_activity_install_app">Pagar</string>
    <string name="mpsdk_install_app_label">Para pagar, instala la aplicación de MercadoPago</string>
    <string name="mpsdk_install_app_button">Instalar la aplicación</string>
...
