...
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:minHeight="?attr/actionBarSize"
    android:background="@android:color/transparent">

    <com.mercadopago.customviews.MPTextView
        android:id="@+id/mpsdkButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
...
