package com.mercadopago;

import android.annotation.TargetApi;
import android.app.Activity;
import android.app.Instrumentation;
import android.content.Intent;
import android.os.Build;
import android.os.Handler;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.ViewInteraction;
import android.support.test.espresso.intent.Intents;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.support.v4.content.ContextCompat;
import android.test.suitebuilder.annotation.LargeTest;
import android.widget.FrameLayout;
import android.widget.ImageView;

import com.google.gson.reflect.TypeToken;
import com.mercadopago.customviews.MPTextView;
import com.mercadopago.model.BankDeal;
import com.mercadopago.model.Card;
import com.mercadopago.model.DecorationPreference;
import com.mercadopago.model.DummyCard;
import com.mercadopago.model.DummyIdentificationType;
import com.mercadopago.model.IdentificationType;
import com.mercadopago.model.Issuer;
import com.mercadopago.model.PayerCost;
import com.mercadopago.model.Payment;
import com.mercadopago.model.PaymentMethod;
import com.mercadopago.model.PaymentPreference;
import com.mercadopago.model.PaymentRecovery;
import com.mercadopago.model.Token;
import com.mercadopago.test.ActivityResult;
import com.mercadopago.test.FakeAPI;
import com.mercadopago.test.StaticMock;
import com.mercadopago.util.JsonUtil;
import com.mercadopago.utils.ActivityResultUtil;
import com.mercadopago.utils.CardTestUtils;
import com.mercadopago.utils.IdentificationTestUtils;
import com.mercadopago.utils.ViewUtils;

import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.lang.reflect.Type;
import java.util.ArrayList;
import java.util.List;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.clearText;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.intent.Intents.intended;
import static android.support.test.espresso.intent.Intents.intending;
import static android.support.test.espresso.intent.matcher.IntentMatchers.hasComponent;
import static android.support.test.espresso.matcher.ViewMatchers.hasFocus;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayingAtLeast;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.mercadopago.utils.ActivityResultUtil.assertFinishCalledWithResult;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertNotNull;
import static org.junit.Assert.assertTrue;

/**
 * Created by vaserber on 7/15/16.
 */
@RunWith(AndroidJUnit4.class)
@LargeTest
public class GuessingCardActivityTest {

    @Rule
    public ActivityTestRule<GuessingCardActivity> mTestRule = new ActivityTestRule<>(GuessingCardActivity.class, true, false);
    public Intent validStartIntent;

    private String mMerchantPublicKey;

    private FakeAPI mFakeAPI;

    @Before
    public void createValidStartIntent() {
        mMerchantPublicKey = StaticMock.DUMMY_TEST_PUBLIC_KEY;

        validStartIntent = new Intent();
        validStartIntent.putExtra("publicKey", mMerchantPublicKey);
    }

    @Before
    public void startFakeAPI() {
        mFakeAPI = new FakeAPI();
        mFakeAPI.start();
    }

    @Before
    public void initIntentsRecording() {
        Intents.init();
    }

    @After
    public void stopFakeAPI() {
        mFakeAPI.stop();
    }

    @After
    public void releaseIntents() {
        Intents.release();
    }

    @Test
    public void getActivityParametersOnCreateIsValid() {
        addBankDealsCall();
        String paymentMethods = StaticMock.getPaymentMethodList();
        Type listType = new TypeToken<List<PaymentMethod>>() {
        }.getType();
        List<PaymentMethod> paymentMethodList = JsonUtil.getInstance().getGson().fromJson(paymentMethods, listType);
        mFakeAPI.addResponseToQueue(paymentMethods, 200, "");

        GuessingCardActivity activity = mTestRule.launchActivity(validStartIntent);
        assertEquals(activity.mPublicKey, mMerchantPublicKey);
        assertNotNull(activity.mPaymentMethodList);
        assertEquals(activity.mPaymentMethodList.size(), paymentMethodList.size());
        assertFalse(mTestRule.getActivity().isFinishing());
    }

    @Test
    public void initializeWithPaymentMethodListIsValid() {
        addBankDealsCall();
        String paymentMethods = StaticMock.getPaymentMethodList();
        Type listType = new TypeToken<List<PaymentMethod>>() {
        }.getType();
        List<PaymentMethod> paymentMethodList = JsonUtil.getInstance().getGson().fromJson(paymentMethods, listType);

        validStartIntent.putExtra("paymentMethodList", JsonUtil.getInstance().toJson(paymentMethodList));

        GuessingCardActivity activity = mTestRule.launchActivity(validStartIntent);
        assertEquals(activity.mPublicKey, mMerchantPublicKey);
        assertNotNull(activity.mPaymentMethodList);
        assertEquals(activity.mPaymentMethodList.size(), paymentMethodList.size());
        assertFalse(mTestRule.getActivity().isFinishing());
    }

    @Test
    public void initializeWithDecorationPreference() {
        addBankDealsCall();
        addPaymentMethodsCall();

        DecorationPreference decorationPreference = new DecorationPreference();
        decorationPreference.setBaseColor(ContextCompat.getColor(InstrumentationRegistry.getContext(), R.color.mpsdk_color_red_error));
        validStartIntent.putExtra("decorationPreference", JsonUtil.getInstance().toJson(decorationPreference));

        mTestRule.launchActivity(validStartIntent);
        try {
            Thread.sleep(5000);
        } catch (InterruptedException e) {

        }

        FrameLayout cardBackground = (FrameLayout) mTestRule.getActivity().findViewById(R.id.mpsdkCardBackground);
        int color = ViewUtils.getBackgroundColor(cardBackground);
        assertEquals(color, decorationPreference.getLighterColor());
        assertFalse(mTestRule.getActivity().isFinishing());
    }

    @Test
    public void initializeWithDecorationPreferenceDarkFont() {
        addBankDealsCall();
        addPaymentMethodsCall();

        DecorationPreference decorationPreference = new DecorationPreference();
        decorationPreference.setBaseColor(ContextCompat.getColor(InstrumentationRegistry.getContext(), R.color.mpsdk_color_red_error));
        decorationPreference.enableDarkFont();
        validStartIntent.putExtra("decorationPreference", JsonUtil.getInstance().toJson(decorationPreference));

        mTestRule.launchActivity(validStartIntent);

        MPTextView toolbarTitle = (MPTextView) mTestRule.getActivity().findViewById(R.id.mpsdkButtonText);
        int fontColor = toolbarTitle.getCurrentTextColor();
        int expectedColor = ContextCompat.getColor(InstrumentationRegistry.getContext(), R.color.mpsdk_dark_font_color);
        assertEquals(fontColor, expectedColor);
        assertFalse(mTestRule.getActivity().isFinishing());
    }

    @Test
    public void initializeWithEmptyPaymentPreferenceIsValid() {
        addBankDealsCall();
        addPaymentMethodsCall();

        validStartIntent.putExtra("paymentPreference", JsonUtil.getInstance().toJson(StaticMock.getEmptyPaymentPreference()));

        mTestRule.launchActivity(validStartIntent);
        try {
            Thread.sleep(5000);
        } catch (InterruptedException e) {

        }
        assertFalse(mTestRule.getActivity().isFinishing());
    }

    @Test
    public void initializeWithPaymentMethodExclusionNotSupported() {
        addBankDealsCall();
        addPaymentMethodsCall();

        PaymentPreference paymentPreference = StaticMock.getEmptyPaymentPreference();
        List<String> excludedPaymentMethods = new ArrayList<>();
        excludedPaymentMethods.add("visa");
        paymentPreference.setExcludedPaymentMethodIds(excludedPaymentMethods);
        validStartIntent.putExtra("paymentPreference", JsonUtil.getInstance().toJson(paymentPreference));

        mTestRule.launchActivity(validStartIntent);

        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("visa").getCardNumber()));
        onView(withId(R.id.mpsdkButtonContainer)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkErrorContainer)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkErrorTextView)).check(matches(withText(R.string.mpsdk_invalid_payment_method)));
    }

    @Test
    public void initializeWithoutPublicKeyIsInvalid() {
        Intent invalidStartIntent = new Intent();
        addBankDealsCall();
        addPaymentMethodsCall();

        mTestRule.launchActivity(invalidStartIntent);
        assertTrue(mTestRule.getActivity().isFinishing());
    }

    @Test
    public void initializeWithPaymentMethodExclusionSupported() {
        addInitCalls();

        PaymentPreference paymentPreference = StaticMock.getEmptyPaymentPreference();
        List<String> excludedPaymentMethods = new ArrayList<>();
        excludedPaymentMethods.add("visa");
        paymentPreference.setExcludedPaymentMethodIds(excludedPaymentMethods);
        validStartIntent.putExtra("paymentPreference", JsonUtil.getInstance().toJson(paymentPreference));

        mTestRule.launchActivity(validStartIntent);

        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("master").getCardNumber()));
        onView(withId(R.id.mpsdkButtonContainer)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkErrorContainer)).check(matches(not(isDisplayed())));

    }

    @Test
    public void initializeWithPaymentTypeExclusionNotSupported() {
        addBankDealsCall();
        addPaymentMethodsCall();

        PaymentPreference paymentPreference = StaticMock.getEmptyPaymentPreference();
        List<String> excludedPaymentTypes = new ArrayList<>();
        excludedPaymentTypes.add("credit_card");
        paymentPreference.setExcludedPaymentTypeIds(excludedPaymentTypes);
        validStartIntent.putExtra("paymentPreference", JsonUtil.getInstance().toJson(paymentPreference));

        mTestRule.launchActivity(validStartIntent);

        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("visa").getCardNumber()));
        onView(withId(R.id.mpsdkButtonContainer)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkErrorContainer)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkErrorTextView)).check(matches(withText(R.string.mpsdk_invalid_payment_method)));
    }

    @Test
    public void initializeWithPaymentTypeExclusionSupported() {
        addInitCalls();

        PaymentPreference paymentPreference = StaticMock.getEmptyPaymentPreference();
        List<String> excludedPaymentTypes = new ArrayList<>();
        excludedPaymentTypes.add("debit_card");
        paymentPreference.setExcludedPaymentTypeIds(excludedPaymentTypes);
        validStartIntent.putExtra("paymentPreference", JsonUtil.getInstance().toJson(paymentPreference));

        mTestRule.launchActivity(validStartIntent);

        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("master").getCardNumber()));
        onView(withId(R.id.mpsdkButtonContainer)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkErrorContainer)).check(matches(not(isDisplayed())));
    }

    @Test
    public void showBankDealsOnlyCardSteps() {
        List<DummyCard> dummyCards = CardTestUtils.getSomeCards();

        List<BankDeal> bankDeals = StaticMock.getBankDeals();

        String paymentMethods = StaticMock.getPaymentMethodList();
        Type listType = new TypeToken<List<PaymentMethod>>() {
        }.getType();
        List<PaymentMethod> paymentMethodList = JsonUtil.getInstance().getGson().fromJson(paymentMethods, listType);

        String identificationTypes = StaticMock.getIdentificationTypeList();
        Type listType2 = new TypeToken<List<IdentificationType>>() {
        }.getType();
        List<IdentificationType> identificationTypeList = JsonUtil.getInstance().getGson().fromJson(identificationTypes, listType2);

        for (DummyCard card : dummyCards) {
            mFakeAPI.addResponseToQueue(bankDeals, 200, "");
            mFakeAPI.addResponseToQueue(paymentMethodList, 200, "");
            mFakeAPI.addResponseToQueue(identificationTypeList, 200, "");
            Activity activity = mTestRule.launchActivity(validStartIntent);

            onView(withId(R.id.mpsdkCardNumber)).perform(typeText(card.getCardNumber()));
            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkCardholderName)).perform(typeText(StaticMock.DUMMY_CARDHOLDER_NAME));
            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkCardExpiryDate)).perform(typeText(StaticMock.DUMMY_EXPIRATION_DATE));
            onView(withId(R.id.mpsdkButtonText)).check(matches(isDisplayed()));
            onView(withId(R.id.mpsdkButtonText)).check(matches(withText(R.string.mpsdk_bank_deals_action)));
            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkCardSecurityCode)).perform(typeText(card.getSecurityCode()));
            onView(withId(R.id.mpsdkButtonText)).check(matches(isDisplayed()));
            onView(withId(R.id.mpsdkButtonText)).check(matches(withText(R.string.mpsdk_bank_deals_action)));
            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkButtonText)).check(matches(not(isDisplayed())));

            activity.finish();
        }
    }

    @Test
    public void onBankDealsEmptyDontShowBankDealsOnToolbar() {
        List<DummyCard> dummyCards = CardTestUtils.getSomeCards();
        List<BankDeal> bankDeals = new ArrayList<>();

        String paymentMethods = StaticMock.getPaymentMethodList();
        Type listType = new TypeToken<List<PaymentMethod>>() {
        }.getType();
        List<PaymentMethod> paymentMethodList = JsonUtil.getInstance().getGson().fromJson(paymentMethods, listType);

        String identificationTypes = StaticMock.getIdentificationTypeList();
        Type listType2 = new TypeToken<List<IdentificationType>>() {
        }.getType();
        List<IdentificationType> identificationTypeList = JsonUtil.getInstance().getGson().fromJson(identificationTypes, listType2);

        for (DummyCard card : dummyCards) {
            mFakeAPI.addResponseToQueue(bankDeals, 200, "");
            mFakeAPI.addResponseToQueue(paymentMethodList, 200, "");
            mFakeAPI.addResponseToQueue(identificationTypeList, 200, "");
            Activity activity = mTestRule.launchActivity(validStartIntent);

            onView(withId(R.id.mpsdkCardNumber)).perform(typeText(card.getCardNumber()));
            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkCardholderName)).perform(typeText(StaticMock.DUMMY_CARDHOLDER_NAME));
            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkCardExpiryDate)).perform(typeText(StaticMock.DUMMY_EXPIRATION_DATE));
            onView(withId(R.id.mpsdkButtonText)).check(matches(not(isDisplayed())));

            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkCardSecurityCode)).perform(typeText(card.getSecurityCode()));
            onView(withId(R.id.mpsdkButtonText)).check(matches(not(isDisplayed())));

            onView(withId(R.id.mpsdkNextButton)).perform(click());
            onView(withId(R.id.mpsdkButtonText)).check(matches(not(isDisplayed())));

            activity.finish();
        }
    }

    @Test
    public void showNextAndBackButtonsOnStart() {
        addInitCalls();

        mTestRule.launchActivity(validStartIntent);
        onView(withId(R.id.mpsdkNextButton)).check(matches(isDisplayingAtLeast(100)));
        onView(withId(R.id.mpsdkBackInactiveButton)).check(matches(isDisplayingAtLeast(100)));
        onView(withId(R.id.mpsdkBackButton)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("master").getCardNumber()));
        onView(withId(R.id.mpsdkNextButton)).perform(click());
        onView(withId(R.id.mpsdkNextButton)).check(matches(isDisplayingAtLeast(100)));
        onView(withId(R.id.mpsdkBackButton)).check(matches(isDisplayingAtLeast(100)));
        onView(withId(R.id.mpsdkBackInactiveButton)).check(matches(not(isDisplayed())));
    }

    @Test
    public void checkEditTextNavigationWithValidData() {
        addInitCalls();

        mTestRule.launchActivity(validStartIntent);

        cardNumberIsCurrentEditText();
        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("master").getCardNumber()));
        onView(withId(R.id.mpsdkNextButton)).perform(click());

        cardholderNameIsCurrentEditText();
        onView(withId(R.id.mpsdkCardholderName)).perform(typeText(StaticMock.DUMMY_CARDHOLDER_NAME));
        onView(withId(R.id.mpsdkNextButton)).perform(click());

        expiryDateIsCurrentEditText();
        onView(withId(R.id.mpsdkCardExpiryDate)).perform(typeText(StaticMock.DUMMY_EXPIRATION_DATE));
        onView(withId(R.id.mpsdkNextButton)).perform(click());

        securityCodeIsCurrentEditText();
        onView(withId(R.id.mpsdkCardSecurityCode)).perform(typeText(StaticMock.DUMMY_SECURITY_CODE));
        onView(withId(R.id.mpsdkNextButton)).perform(click());

        identificationNumberIsCurrentEditText();
        onView(withId(R.id.mpsdkCardIdentificationNumber)).perform(typeText(StaticMock.DUMMY_IDENTIFICATION_NUMBER));
        onView(withId(R.id.mpsdkBackButton)).perform(click());

        securityCodeIsCurrentEditText();
        onView(withId(R.id.mpsdkBackButton)).perform(click());

        expiryDateIsCurrentEditText();
        onView(withId(R.id.mpsdkBackButton)).perform(click());

        cardholderNameIsCurrentEditText();
        onView(withId(R.id.mpsdkBackButton)).perform(click());

        cardNumberIsCurrentEditText();
    }

    private void identificationNumberIsCurrentEditText() {
        onView(withId(R.id.mpsdkCardNumber)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardholderName)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardExpiryDate)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardSecurityCode)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardIdentificationType)).check(matches((isDisplayed())));
        onView(withId(R.id.mpsdkCardIdentificationNumber)).check(matches((isDisplayed())));

        onView(withId(R.id.mpsdkCardIdentificationNumber)).check(matches(hasFocus()));
    }

    private void securityCodeIsCurrentEditText() {
        onView(withId(R.id.mpsdkCardNumber)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardholderName)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardExpiryDate)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardSecurityCode)).check(matches(isDisplayed()));

        onView(withId(R.id.mpsdkCardSecurityCode)).check(matches(hasFocus()));
    }

    private void expiryDateIsCurrentEditText() {
        onView(withId(R.id.mpsdkCardNumber)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardholderName)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardExpiryDate)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkCardIdentificationNumber)).check(matches(not(isDisplayed())));

        onView(withId(R.id.mpsdkCardExpiryDate)).check(matches(hasFocus()));
    }

    private void cardholderNameIsCurrentEditText() {
        onView(withId(R.id.mpsdkCardNumber)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardholderName)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkCardSecurityCode)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardIdentificationType)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardIdentificationNumber)).check(matches(not(isDisplayed())));

        onView(withId(R.id.mpsdkCardholderName)).check(matches(hasFocus()));
    }

    private void cardNumberIsCurrentEditText() {
        onView(withId(R.id.mpsdkCardNumber)).check(matches(isDisplayed()));
        onView(withId(R.id.mpsdkCardExpiryDate)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardSecurityCode)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardIdentificationType)).check(matches(not(isDisplayed())));
        onView(withId(R.id.mpsdkCardIdentificationNumber)).check(matches(not(isDisplayed())));

        onView(withId(R.id.mpsdkCardNumber)).check(matches(hasFocus()));
    }

    @Test
    public void checkCardNumberNavigationWithInvalidData() {
        addInitCalls();
        addIdentificationTypesCall();

        mTestRule.launchActivity(validStartIntent);

        cardNumberIsCurrentEditText();
        for (String invalidNumber : CardTestUtils.getInvalidCardNumbers()) {
            checkCardNumber(invalidNumber);
            cardNumberIsCurrentEditText();
        }
    }

    private void checkCardNumber(String number) {
        onView(withId(R.id.mpsdkCardNumber)).perform(clearText());
        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(number));
        onView(withId(R.id.mpsdkNextButton)).perform(click());
    }

    @Test
    public void checkCardholderNameNavigationWithInvalidData() {
        addInitCalls();

        mTestRule.launchActivity(validStartIntent);

        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("master").getCardNumber()));
        onView(withId(R.id.mpsdkNextButton)).perform(click());
        cardholderNameIsCurrentEditText();
        onView(withId(R.id.mpsdkCardholderName)).perform(typeText(""));
        onView(withId(R.id.mpsdkNextButton)).perform(click());
        cardholderNameIsCurrentEditText();
        onView(withId(R.id.mpsdkCardholderName)).perform(typeText(StaticMock.DUMMY_CARDHOLDER_NAME));
        onView(withId(R.id.mpsdkNextButton)).perform(click());
        expiryDateIsCurrentEditText();
    }

    @Test
    public void checkExpiryDateNavigationWithInvalidData() {
        addInitCalls();

        mTestRule.launchActivity(validStartIntent);

        onView(withId(R.id.mpsdkCardNumber)).perform(typeText(CardTestUtils.getDummyCard("master").getCardNumber()));
        sleep();
        onView(withId(R.id.mpsdkNextButton)).perform(click());
        onView(withId(R.id.mpsdkCardholderName)).perform(typeText(StaticMock.DUMMY_CARDHOLDER_NAME));
        sleep();
        onView(withId(R.id.mpsdkNextButton)).perform(click());
        expiryDateIsCurrentEditText();
        for (String invalidDate : CardTestUtils.getInvalidExpiryDates()) {
            checkExpiryDateIsInvalid(invalidDate, onView(withId(R.id.mpsdkNextButton)));
            checkExpiryDateIsInvalid(invalidDate, onView(withId(R.id.mpsdkBackButton)));
        }
    }

    private void fillExpiryDate(String date) {
